--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Light mode favicon -->
+    <link rel="icon" href="/src/assets/SceneMe_black_icon_transparent.png" media="(prefers-color-scheme: light)" />
+
+    <!-- Dark mode favicon -->
+    <link rel="icon" href="/src/assets/SceneMe_white_icon_transparent.png" media="(prefers-color-scheme: dark)" />
+
+    <!-- Fallback favicon -->
+    <link rel="icon" href="/src/assets/SceneMe_black_icon_transparent.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
