--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/SceneMe_black_icon_transparent.png?v=3" media="(prefers-color-scheme: light)" />
     <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/SceneMe_white_icon_transparent.png?v=3" media="(prefers-color-scheme: dark)" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>SceneMe</title>
   </head>
   <body>
     <div id="root"></div>
