--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Color-scheme hint lets the UA know we support both themes -->
-    <meta name="color-scheme" content="light dark" />
-    <!-- Favicons: browser will pick the one matching the current theme -->
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/SceneMe_black_icon_transparent.png?v=3" media="(prefers-color-scheme: light)" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/SceneMe_white_icon_transparent.png?v=3" media="(prefers-color-scheme: dark)" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/SceneMe_black_icon_transparent.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SceneMe</title>
   </head>
