--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/SceneMe_black_favicon_transparent.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SceneMe</title>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="theme-color" content="#000000" />
   </head>
   <body>
     <div id="root"></div>
